Feat: New email sender provider

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
               </li>
               <li class="header_nav_item">
                 <!-- <a href="#products" class="header_nav_link">Productos</a> -->
-                <a href="/products.html" class="header_nav_link">Productos</a>
+                <a href="#products" class="header_nav_link">Productos</a>
               </li>
               <li class="header_nav_item">
                 <a href="#testimonials"
@@ -236,7 +236,11 @@
         <!-- </div> -->
       </div>
 
-      <button class="products_all">Ver todo</button>
+      <a href="./products.html">
+        <button class="products_all">
+          Ver todo
+        </button>
+      </a>
 
       <div class="end_section"></div>
     </main>
@@ -327,8 +331,7 @@
         </div>
 
         <div>
-          <form class="form" action="https://formspree.io/f/xzzrgagp"
-            method="POST">
+          <form class="form">
             <div class="contact_item_group">
               <div class="contact_item">
                 <label for="name" class="contact_label">Nombre:</label>
